--- a/styles2.css
+++ b/styles2.css
@@ -34,7 +34,7 @@ body {
 }
 
 .banner-img {
-    width: 100%;
+    width: 500px;
     height: auto;
     border-radius: 10px;
     margin-bottom: 20px;
