--- a/styles3.css
+++ b/styles3.css
@@ -30,7 +30,7 @@ body {
 .ref1 {
     text-align: center;
     padding: 10px;
-    background-color: #4CAF50;
+    background-color: #007bff;
     margin-bottom: 20px;
 }
 
@@ -56,7 +56,7 @@ body {
 .ranking h1 {
     text-align: center;
     margin-bottom: 20px;
-    color: #4CAF50;
+    color: #007bff;
 }
 
 table {
@@ -66,7 +66,7 @@ table {
 }
 
 thead {
-    background-color: #4CAF50;
+    background-color: #007bff;
     color: #fff;
 }
 
