--- a/styles2.css
+++ b/styles2.css
@@ -160,4 +160,31 @@ tbody img {
         text-align: left;
         font-weight: bold;
     }
+    .up {
+        color: green;
+        font-weight: bold;
+    }
+
+    .down {
+        color: red;
+        font-weight: bold;
+    }
+
+    .progress-bar-container {
+        background-color: #e0e0e0;
+        border-radius: 5px;
+        overflow: hidden;
+        width: 100%;
+        max-width: 200px;
+    }
+
+    .progress-bar {
+        height: 20px;
+        background-color: #007bff;
+        text-align: center;
+        color: white;
+        line-height: 20px;
+        border-radius: 5px;
+    }
+
 }
