--- a/styles2.css
+++ b/styles2.css
@@ -188,23 +188,27 @@ tbody img {
         border-radius: 5px;
     }
  
+    .btn-sala {
+        display: inline-block;
+        width: 30px;  /* Define a largura do botão */
+        height: 30px; /* Define a altura do botão */
+        background-color: #007bff;
+        border-radius: 5px;
+        text-align: center;
+        padding: 0;  /* Remove qualquer padding extra */
+    }
+    
     .btn-sala img {
-        width: 7.5px;  /* Reduzido em 25% de 10px */
-        height: 7.5px; /* Reduzido em 25% de 10px */
+        width: 100%;  /* Faz a imagem ocupar toda a largura do botão */
+        height: 100%; /* Faz a imagem ocupar toda a altura do botão */
+        object-fit: contain; /* Ajusta a imagem para caber bem no botão */
         transition: opacity 0.3s ease; /* Adiciona uma transição suave para o efeito de hover */
     }
     
-    .btn-sala {
-        display: inline-block;
-        padding: 4px;  /* Ajusta o padding para se alinhar com o tamanho da imagem */
-        background-color: #007bff;
-        color: transparent; /* Oculta o texto, já que usamos a imagem como botão */
-        text-decoration: none;
-        border-radius: 5px;
-        text-align: center;
-        font-size: 14px;
+    .btn-sala:hover {
+        background-color: #0056b3;
     }
-
+    
     .btn-sala:hover img {
         opacity: 0.8; /* Escurece o botão quando o mouse passa sobre ele */
     }
