--- a/styles2.css
+++ b/styles2.css
@@ -46,10 +46,16 @@ body {
 }
 
 .banner-img {
+    width: 100%;
+    height: auto;
+    border-radius: 10px;
+}
+
+/* Reset some default styles .banner-img {
     width: 500px;
     max-width: 500px;
     border-radius: 10px;
-}
+}*/
 
 .ranking {
     padding: 15px;
