--- a/styles2.css
+++ b/styles2.css
@@ -7,20 +7,20 @@
 }
 
 body {
-    background-color: #f4f4f4;
+    background-color: #f0f0f0;
     color: #333;
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
     min-height: 100vh;
-    margin: 0;
+    padding: 20px; /* Adiciona espaçamento para o conteúdo */
     flex-direction: column;
 }
 
 .container {
     width: 90%;
     max-width: 1200px;
-    margin: 20px;
+    padding: 20px;
     background: #fff;
     border-radius: 10px;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
@@ -46,7 +46,7 @@ body {
 }
 
 .banner-img {
-    width: 100%;
+    width: 90%;
     max-width: 500px;
     height: auto;
     border-radius: 10px;
