--- a/styles2.css
+++ b/styles2.css
@@ -11,7 +11,7 @@ body {
     color: #333;
     display: flex;
     justify-content: center;
-    align-items: flex-start;
+    align-items: center;
     min-height: 100vh;
     padding: 20px; /* Adiciona espaçamento para o conteúdo */
     flex-direction: column;
