--- a/styles2.css
+++ b/styles2.css
@@ -27,28 +27,21 @@ body {
     overflow: hidden;
 }
 
-.ref1 {
-    text-align: center;
-    padding: 10px;
-    background-color: #007bff;
-    margin-bottom: 10px;
-}
-
 .profile, .banner {
     text-align: center;
     margin-bottom: 10px;
 }
 
 .profile-pic {
-    width: 100%;
-    max-width: 150px;
+    width: 150px;
+    height: 150px;
     border-radius: 50%;
+    object-fit: cover;
 }
 
 .banner-img {
-    width: 90%;
-    max-width: 500px;
-    padding: 20px
+    width: 100%;
+    max-width: 480px;
     height: auto;
     border-radius: 10px;
 }
