--- a/styles2.css
+++ b/styles2.css
@@ -27,6 +27,11 @@ body {
     overflow: hidden;
 }
 
+.ref {
+    margin-top: 20px;
+    text-align: center;
+}
+
 .profile, .banner {
     text-align: center;
     margin-bottom: 10px;
