--- a/styles2.css
+++ b/styles2.css
@@ -22,6 +22,7 @@ body {
     max-width: 1200px;
     padding: 20px;
     background: #fff;
+    justify-content: center; /* Centraliza horizontalmente */
     border-radius: 10px;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
     overflow: hidden;
