--- a/styles3.css
+++ b/styles3.css
@@ -24,6 +24,7 @@ body {
     max-width: 500px;
     padding: 20px;
     background: #fff;
+    justify-content: center; /* Centraliza horizontalmente */
     border-radius: 10px;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
     overflow: hidden;
