--- a/styles3.css
+++ b/styles3.css
@@ -82,6 +82,10 @@ body {
     margin-top: 20px;
 }
 
+.calc {
+    padding: 15px;
+}
+
 .calc h1 {
     text-align: center;
     margin-bottom: 5px;
