--- a/styles3.css
+++ b/styles3.css
@@ -107,3 +107,37 @@ body {
     text-align: center;
     margin-bottom: 10px;
 }
+
+/* Estilo para a tabela */
+table {
+    width: 100%;
+    border-collapse: collapse;
+    margin-top: 20px;
+}
+
+th, td {
+    border: 1px solid #ddd;
+    padding: 10px;
+    text-align: center;
+}
+
+th {
+    background-color: #007bff;
+    color: #fff;
+}
+
+input.power-input, input.bonus-input {
+    width: 100%;
+    padding: 8px;
+    font-size: 14px;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+}
+
+input.power-input {
+    background-color: #f9f9f9;
+}
+
+input.bonus-input {
+    background-color: #f9f9f9;
+}
