--- a/styles3.css
+++ b/styles3.css
@@ -21,7 +21,7 @@ body {
 /* Container principal */
 .container {
     width: 100%;
-    max-width: 500px;
+    max-width: 800px; /* Aumentado para acomodar a tabela */
     padding: 20px;
     background: #fff;
     justify-content: center; /* Centraliza horizontalmente */
@@ -58,19 +58,24 @@ body {
     border-radius: 10px;
 }
 
-/* Estilo para o link da sala e o botão de pesquisa */
-.input-container {
-    margin-bottom: 15px; /* Adiciona margin-bottom */
+/* Centralizar os resultados */
+#results {
+    text-align: left;
+    margin: 20px 0; /* Ajuste o espaçamento acima e abaixo */
     display: flex;
-    justify-content: center;
-    align-items: center;
+    flex-direction: column;
+    align-items: center; /* Centraliza o conteúdo horizontalmente */
+}
+
+/* Estilo para a caixa de entrada e botão */
+.input-container {
+    margin-bottom: 15px; /* Adiciona espaço abaixo da caixa de entrada */
 }
 
 #linkInput {
     padding: 10px;
     font-size: 16px;
     margin-right: 10px;
-    flex: 1; /* Faz o input preencher o espaço disponível */
 }
 
 #searchButton {
@@ -87,10 +92,27 @@ body {
     background-color: #0056b3;
 }
 
-/* Estilo para os resultados */
-.results {
+/* Estilo para a tabela */
+table {
+    width: 100%;
+    border-collapse: collapse;
     margin-top: 20px;
-    text-align: center;
+}
+
+th, td {
+    border: 1px solid #ddd;
+    padding: 10px;
+    text-align: center; /* Centraliza o texto dentro das células */
+}
+
+th {
+    background-color: #f2f2f2;
+    font-weight: bold;
+}
+
+input[type="text"] {
+    width: 100%;
+    box-sizing: border-box; /* Inclui o padding e border no tamanho total da célula */
 }
 
 .calc {
@@ -106,38 +128,4 @@ body {
 .calc h3 {
     text-align: center;
     margin-bottom: 10px;
-}
-
-/* Estilo para a tabela */
-table {
-    width: 100%;
-    border-collapse: collapse;
-    margin-top: 20px;
-}
-
-th, td {
-    border: 1px solid #ddd;
-    padding: 10px;
-    text-align: center;
-}
-
-th {
-    background-color: #007bff;
-    color: #fff;
-}
-
-input.power-input, input.bonus-input {
-    width: 100%;
-    padding: 8px;
-    font-size: 14px;
-    border: 1px solid #ddd;
-    border-radius: 5px;
-}
-
-input.power-input {
-    background-color: #f9f9f9;
-}
-
-input.bonus-input {
-    background-color: #f9f9f9;
 }
