--- a/styles3.css
+++ b/styles3.css
@@ -157,6 +157,8 @@ input.bonus-input {
     border: none;
     border-radius: 5px;
     cursor: pointer;
+    display: block; /* Adicionado para centralizar */
+    margin: 0 auto; /* Adicionado para centralizar */
 }
 
 #calculateButton:hover {
