--- a/styles3.css
+++ b/styles3.css
@@ -157,6 +157,7 @@ input.bonus-input {
     border: none;
     border-radius: 5px;
     cursor: pointer;
+    margin-top: 10px;
     display: block; /* Adicionado para centralizar */
     margin: 0 auto; /* Adicionado para centralizar */
 }
