--- a/styles4.css
+++ b/styles4.css
@@ -25,19 +25,26 @@ body {
     width: 100%;
 }
 
-.profile-pic {
-    width: 150px;
-    height: 150px;
-    border-radius: 50%;
-    object-fit: cover;
+/* Estilo para profile e banner */
+.profile, .banner {
+    text-align: center;
     margin-bottom: 10px;
 }
 
+/* Estilo para a imagem de perfil */
+.profile-pic {
+    width: 150px;
+    height: 150px;
+    border-radius: 30%;
+    object-fit: cover;
+}
+
+/* Estilo para o banner */
 .banner-img {
     width: 100%;
+    max-width: 480px;
     height: auto;
     border-radius: 10px;
-    margin-bottom: 20px;
 }
 
 .links a {
@@ -69,7 +76,79 @@ body {
     text-align: center;
 }
 
-.adsbygoogle {
-    display: block;
-    margin: 20px auto;
+/* Estilo para o link da sala e o botão de pesquisa */
+.input-container {
+    margin-bottom: 15px; /* Adiciona margin-bottom */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#linkInput {
+    padding: 10px;
+    font-size: 16px;
+    margin-right: 10px;
+    flex: 1; /* Faz o input preencher o espaço disponível */
+}
+
+#searchButton {
+    padding: 10px 20px;
+    font-size: 16px;
+    background-color: #007bff;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+#searchButton:hover {
+    background-color: #0056b3;
+}
+
+/* Estilo para os resultados */
+.results {
+    margin-top: 20px;
+    text-align: center;
+}
+
+.calc {
+    padding: 15px;
+}
+
+.calc h1 {
+    text-align: center;
+    margin-bottom: 5px;
+    color: #007bff;
+}
+
+.calc h3 {
+    text-align: center;
+    margin-bottom: 10px;
+}
+
+/* Estilo para a tabela */
+table {
+    width: 100%;
+    border-collapse: collapse;
+    margin-top: 20px;
+}
+
+th, td {
+    border: 1px solid #ddd;
+    padding: 10px;
+    text-align: center;
+}
+
+th {
+    background-color: #007bff;
+    color: #fff;
+}
+
+input.miner-data {
+    width: 100%;
+    padding: 8px;
+    font-size: 14px;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    background-color: #f9f9f9;
 }
