--- a/ranking/styles2.css
+++ b/ranking/styles2.css
@@ -15,6 +15,7 @@ body {
     min-height: 100vh;
     padding: 20px; /* Adiciona espaçamento para o conteúdo */
     flex-direction: column;
+    transition: background-color 0.3s, color 0.3s;
 }
 
 .container {
@@ -209,4 +210,74 @@ tbody img {
     display: flex;
     justify-content: center; /* Centraliza horizontalmente */
     align-items: center; /* Centraliza verticalmente */
+}
+
+/* Estilos para o modo escuro */
+body.dark-mode {
+    background-color: #333;
+    color: #fff;
+}
+
+.dark-mode .container {
+    background-color: #444;
+}
+
+.dark-mode thead {
+    background-color: #555;
+}
+
+.dark-mode tbody tr:nth-child(even) {
+    background-color: #666;
+}
+
+.dark-mode tbody tr:hover {
+    background-color: #777;
+}
+
+/* Toggle Switch */
+.switch {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    display: inline-block;
+    width: 60px;
+    height: 34px;
+}
+
+.switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+
+.slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    transition: 0.4s;
+    border-radius: 34px;
+}
+
+.slider:before {
+    position: absolute;
+    content: "";
+    height: 26px;
+    width: 26px;
+    left: 4px;
+    bottom: 4px;
+    background-color: white;
+    transition: 0.4s;
+    border-radius: 50%;
+}
+
+input:checked + .slider {
+    background-color: #2196F3;
+}
+
+input:checked + .slider:before {
+    transform: translateX(26px);
 }
