--- a/ranking/styles2.css
+++ b/ranking/styles2.css
@@ -236,12 +236,11 @@ body.dark-mode {
 
 /* Toggle Switch */
 .switch {
-    position: absolute;
-    top: 20px;
-    right: 20px;
-    display: inline-block;
+    display: block;
+    margin: 20px auto; /* Centraliza o switch horizontalmente e adiciona margem */
     width: 60px;
     height: 34px;
+    position: relative; /* Removido para centralização */
 }
 
 .switch input {
@@ -257,7 +256,7 @@ body.dark-mode {
     left: 0;
     right: 0;
     bottom: 0;
-    background-color: #ccc;
+    background-color: #000; /* Preto */
     transition: 0.4s;
     border-radius: 34px;
 }
